Step5 - Added React Context API to automatically go to the home page once the user is logged in.

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,9 +1,10 @@
 .header {
   display: flex;
   padding: 5px;
-  height: 10vh;
+  height: 30vh;
   position: sticky;
   top: 500;
+  justify-content: center;
 }
 
 .header__logo {
