--- a/src/Home.css
+++ b/src/Home.css
@@ -1,12 +1,36 @@
-.home {
+.home__messageSection {
   padding: 20px;
-  margin-top: 5vh;
+  max-width: 50%;
 }
 
-.home__message{
-    font-weight: bold;
-    font-size: 18px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.home__userMessageContainer {
+  display: flex;
+  margin-bottom: 1%;
+  margin-top: 2%;
+  align-items: center;
+}
+
+.home__username {
+  margin-left: 1%;
+}
+
+.home__messageContainer {
+  display: flex;
+  flex:0.5;
+  margin-bottom: 1%;
+  margin-top: 2%;
+}
+
+.home__message {
+  flex: 1;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  margin-left: 0.5%;
+  margin-right: 2%;
+  max-width: 40vw;
+  word-wrap: break-word;
+  /* margin-top: 1%; */
 }
 
 .home__replyBtn {
@@ -14,7 +38,7 @@
 }
 
 .home__messageBtn {
-  width: 5%;
+  width: 15%;
   margin-left: 1%;
   border: tomato;
   background-color: tomato;
@@ -34,7 +58,7 @@
   border: none;
   padding: 8px;
   margin-bottom: 1%;
-  margin-left: 1%;
+  margin-left: 3%;
   outline: none;
   width: 30%;
 }
