--- a/src/Login.css
+++ b/src/Login.css
@@ -21,8 +21,14 @@
     font-weight: 600;
     border: 2px solid royalblue;
     border-radius: 12px;
+    margin-top: 5%;
     width: 50%;
+    height: 40px;
     align-self: center;
+}
+
+.login__formSubmit:focus {
+  outline: 0 !important;
 }
 
 .login__formSubmit:hover{
