--- a/src/Login.css
+++ b/src/Login.css
@@ -11,26 +11,46 @@
   flex-direction: column;
 }
 
-.login__formLabel{
-    font-weight: 600;
+.login__formLabel {
+  font-weight: 600;
 }
 
-.login__formSubmit{
-    background-color: royalblue;
-    color: black;
-    font-weight: 600;
-    border: 2px solid royalblue;
-    border-radius: 12px;
-    margin-top: 5%;
-    width: 50%;
-    height: 40px;
-    align-self: center;
+.login__formSubmit {
+  background-color: royalblue;
+  color: black;
+  font-weight: 600;
+  border: 2px solid royalblue;
+  border-radius: 12px;
+  margin-top: 5%;
+  width: 50%;
+  height: 40px;
+  align-self: center;
 }
 
 .login__formSubmit:focus {
   outline: 0 !important;
 }
 
-.login__formSubmit:hover{
-    background-color: skyblue;
+.login__formSubmit:hover {
+  background-color: skyblue;
+}
+
+.login__registerBtn {
+  background-color: forestgreen;
+  color: black;
+  font-weight: 700;
+  border: 2px solid forestgreen;
+  border-radius: 12px;
+  width: 100%;
+  height: 40px;
+  margin-top: 5%;
+  align-self: center;
+}
+
+.login__registerBtn {
+  outline: 0 !important;
+}
+
+.login__registerBtn:hover {
+  background-color: limegreen;
 }
