--- a/src/Register.css
+++ b/src/Register.css
@@ -1,8 +1,9 @@
-.register{
+.register {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  flex-direction: column;
 }
 
 .register__form {
@@ -13,7 +14,7 @@
 
 .register__formLabel {
   font-weight: 600;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .register__formSubmit {
@@ -34,4 +35,24 @@
 
 .register__formSubmit:hover {
   background-color: skyblue;
+}
+
+.register__loginBtn {
+  background-color: forestgreen;
+  color: black;
+  font-weight: 700;
+  border: 2px solid forestgreen;
+  border-radius: 12px;
+  width: 100%;
+  height: 40px;
+  margin-top: 20%;
+  align-self: center;
+}
+
+.register__loginBtn {
+  outline: 0 !important;
+}
+
+.register__loginBtn {
+  background-color: limegreen;
 }
