Step8 - Added edit/delete functionality & tested it with the node.js server successfully. + Enhanced user experience on registration & login

--- a/src/Login.css
+++ b/src/Login.css
@@ -1,8 +1,9 @@
-.login__container {
+.login {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .login__form {
@@ -15,10 +16,19 @@
   font-weight: 600;
 }
 
+.login__input {
+  border-radius: 15px !important;
+}
+
+#login__failedMsg {
+  color: red;
+  display: none;
+}
+
 .login__formSubmit {
   background-color: royalblue;
   color: black;
-  font-weight: 600;
+  font-weight: 700;
   border: 2px solid royalblue;
   border-radius: 12px;
   margin-top: 5%;
@@ -41,10 +51,9 @@
   font-weight: 700;
   border: 2px solid forestgreen;
   border-radius: 12px;
-  width: 100%;
+  width: 15vw;
   height: 40px;
   margin-top: 5%;
-  align-self: center;
 }
 
 .login__registerBtn {
