--- a/src/MessageSection.css
+++ b/src/MessageSection.css
@@ -1,65 +1,69 @@
-
 .home__userMessageContainer {
-    display: flex;
-    margin-bottom: 1%;
-    margin-top: 2%;
-    align-items: center;
-  }
-  
-  .home__username {
-    margin-left: 1%;
-  }
-  
-  .home__messageContainer {
-    display: flex;
-    flex: 0.5;
-    margin-bottom: 1%;
-    margin-top: 2%;
-  }
-  
-  .home__message {
-    flex: 1;
-    font-weight: bold;
-    font-size: 18px;
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    margin-left: 0.5%;
-    margin-right: 2%;
-    max-width: 40vw;
-    word-wrap: break-word;
-    /* margin-top: 1%; */
-  }
-  
-  .home__replyBtn {
-    display: none;
-  }
-  
-  .home__messageBtn {
-    width: 15%;
-    margin-left: 1%;
-    border: tomato;
-    background-color: tomato;
-    border-radius: 12px;
-  }
-  
-  .home__messageBtn:focus {
-    outline: 0 !important;
-  }
-  
-  .home__messageBtn:hover {
-    background-color: salmon;
-  }
-  
-  .home__replyInput {
-    border-radius: 15px;
-    border: none;
-    padding: 8px;
-    margin-bottom: 1%;
-    margin-left: 3%;
-    outline: none;
-    width: 30%;
-  }
-  
-  .material-icon:focus {
-    outline: 0 !important;
-  }
-  
+  display: flex;
+  margin-bottom: 1%;
+  margin-top: 2%;
+  align-items: center;
+}
+
+.home__username {
+  margin-left: 1%;
+}
+
+.home__messageContainer {
+  display: flex;
+  align-items: flex-end;
+  flex: 0.5;
+  margin-bottom: 1%;
+  margin-top: 2%;
+  background-color: lightgray;
+  padding: 5px;
+  border-radius: 15px;
+}
+
+.home__message {
+  flex: 1;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  margin-left: 0.5%;
+  margin-right: 2%;
+  max-width: 40vw;
+  word-wrap: break-word;
+  outline: none;
+  /* margin-top: 1%; */
+}
+
+.home__replyBtn {
+  display: none;
+}
+
+.home__messageBtn {
+  width: 15%;
+  margin-left: 1%;
+  border: tomato;
+  background-color: tomato;
+  border-radius: 12px;
+}
+
+.home__messageBtn:focus {
+  outline: 0 !important;
+}
+
+.home__messageBtn:hover {
+  background-color: salmon;
+}
+
+.home__replyInput {
+  border-radius: 15px;
+  border: none;
+  padding: 8px;
+  resize: both;
+  margin-bottom: 1%;
+  margin-left: 3%;
+  outline: none;
+  width: 50%;
+}
+
+.material-icon:focus {
+  outline: 0 !important;
+}
